fix canvas overflow

--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ body {
 
 @media (max-width: 600px) {
     #score {
-        font-size: 18px; /* Taille de police réduite pour les écrans plus petits */
+        font-size: 14px; /* Taille de police réduite pour les écrans plus petits */
         top: 1vh;
         bottom:auto;
     }
